# adder-dp

./: Cargo.toml
adder-ui/: Cargo.toml  index.html
adder-ui/adder-ui-model/: Cargo.toml
adder-ui/adder-ui-model/src/: lib.rs
adder-ui/src/: app.rs  future.rs  main.rs
adder-ui/src-tauri/: Cargo.toml  tauri.conf.json
adder-ui/src-tauri/src/: main.rs
algorithm/: Cargo.toml
algorithm/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
gui_iced_fail/: Cargo.toml
gui_iced_fail/src/: main.rs
src/: lib.rs  main.rs
