[package]
name = "atomic-bitvec"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
description = "An atomic bit vector library."
license-file = "LICENSE"
repository = "https://github.com/nisamson/atomic-bitvec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
static_assertions = "1.1.0"