[package]
name = "adder-ui-yew"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"
yew-hooks = "0.2.0"
ybc = "0.3.0-beta.0"
regex = "1.7.0"
once_cell = "1.16.0"
adder-ui-model = { path = "adder-ui-model" }
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }

[workspace]
members = ["src-tauri", "adder-ui-model"]
